feat: Initialize the Manpower Management System with a complete backend API and frontend application.

--- a/backend/.env
+++ b/backend/.env
@@ -5,3 +5,5 @@ DB_USER=postgres
 DB_PASSWORD=clown
 DB_NAME=manpower_dev
 DB_SSLMODE=disable
+JWT_SECRET=dev-secret-change-in-production-please
+UPLOAD_DIR=./uploads
